# puter-ai-proxy-bot

./: .env.template  Dockerfile  docker-compose.yaml  pyproject.toml
src/: ai_client.py  bot.py  config.py  main.py
